--- a/index.html
+++ b/index.html
@@ -115,6 +115,15 @@ body{
         <div class="card">
             <a href="THA 14/">DAY 14</a>
         </div>
+        <div class="card">
+            <a href="tha15/">DAY 14</a>
+        </div>
+        <div class="card">
+            <a href="tha16/">DAY 14</a>
+        </div>
+        <div class="card">
+            <a href="tha17/">DAY 14</a>
+        </div>
     </section>
 
     <!-- <script src="app.js" "></script> -->
