--- a/index.html
+++ b/index.html
@@ -95,34 +95,34 @@ body{
             <a href="./THA 07/Readme.md">DAY 7</a>
         </div>
         <div class="card">
-            <a href="THA 08/">DAY 8</a>
+            <a href="./THA 08/">DAY 8</a>
         </div>
         <div class="card">
-            <a href="THA 09/">DAY 9</a>
+            <a href="./THA 09/">DAY 9</a>
         </div>
         <div class="card">
-            <a href="THA 10/">DAY 10</a>
+            <a href="./THA 10/">DAY 10</a>
         </div>
         <div class="card">
-            <a href="THA 11/">DAY 11</a>
+            <a href="./THA 11/">DAY 11</a>
         </div>
         <div class="card">
-            <a href="THA 12/">DAY 12</a>
+            <a href="./THA 12/">DAY 12</a>
         </div>
         <div class="card">
-            <a href="THA 13/">DAY 13</a>
+            <a href="/THA 13/">DAY 13</a>
         </div>
         <div class="card">
-            <a href="THA 14/">DAY 14</a>
+            <a href="./THA 14/">DAY 14</a>
         </div>
         <div class="card">
-            <a href="tha15/">DAY 15</a>
+            <a href="./tha15/">DAY 15</a>
         </div>
         <div class="card">
-            <a href="tha16/">DAY 16</a>
+            <a href="./tha16/">DAY 16</a>
         </div>
         <div class="card">
-            <a href="tha17/">DAY 17</a>
+            <a href="./tha17/">DAY 17</a>
         </div>
     </section>
 
